@@ -17,10 +17,13 @@ import com.rbkmoney.payouter.service.ShumwayService;
 import com.rbkmoney.payouter.service.impl.NonresidentsReportServiceImpl;
 import com.rbkmoney.payouter.service.impl.ResidentsReportServiceImpl;
 import com.rbkmoney.payouter.util.DamselUtil;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.thrift.TException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
+import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -28,38 +31,23 @@ import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
-@Component
+import static java.util.stream.Collectors.toList;
+
+@Slf4j
+@Service
+@RequiredArgsConstructor
 public class PayoutManagementHandler implements PayoutManagementSrv.Iface {
-    private final Logger log = LoggerFactory.getLogger(this.getClass());
 
     public static final int MAX_SIZE = 1000;
 
     private final PayoutService payoutService;
-
     private final ShumwayService shumwayService;
-
     private final PayoutSummaryService payoutSummaryService;
-
     private final ResidentsReportServiceImpl residentsReportService;
-
     private final NonresidentsReportServiceImpl nonresidentsReportService;
 
-    public PayoutManagementHandler(
-            PayoutService payoutService,
-            PayoutSummaryService payoutSummaryService,
-            ShumwayService shumwayService,
-            ResidentsReportServiceImpl residentsReportService,
-            NonresidentsReportServiceImpl nonresidentsReportService
-    ) {
-        this.payoutService = payoutService;
-        this.payoutSummaryService = payoutSummaryService;
-        this.shumwayService = shumwayService;
-        this.residentsReportService = residentsReportService;
-        this.nonresidentsReportService = nonresidentsReportService;
-    }
-
     @Override
-    public com.rbkmoney.damsel.payout_processing.Payout createPayout(PayoutParams params) throws InvalidPayoutTool, InsufficientFunds, InvalidRequest, TException {
+    public com.rbkmoney.damsel.payout_processing.Payout createPayout(PayoutParams params) throws TException {
         try {
             String payoutId = payoutService.create(
                     params.getPayoutId(),
@@ -67,8 +55,7 @@ public class PayoutManagementHandler implements PayoutManagementSrv.Iface {
                     params.getShop().getShopId(),
                     params.getPayoutToolId(),
                     params.getAmount().getAmount(),
-                    params.getAmount().getCurrency().getSymbolicCode()
-            );
+                    params.getAmount().getCurrency().getSymbolicCode());
 
             return DamselUtil.toDamselPayout(payoutService.get(payoutId), shumwayService.getPostings(payoutId))
                     .setSummary(DamselUtil.toDamselPayoutSummary(payoutSummaryService.get(payoutId)));
@@ -77,12 +64,12 @@ public class PayoutManagementHandler implements PayoutManagementSrv.Iface {
         } catch (InvalidStateException ex) {
             throw new InvalidPayoutTool();
         } catch (NotFoundException ex) {
-            throw new InvalidRequest(Collections.singletonList(ex.getMessage()));
+            throw new InvalidRequest(List.of(ex.getMessage()));
         }
     }
 
     @Override
-    public com.rbkmoney.damsel.payout_processing.Payout get(String payoutId) throws PayoutNotFound, TException {
+    public com.rbkmoney.damsel.payout_processing.Payout get(String payoutId) throws TException {
         Payout payout = payoutService.get(payoutId);
 
         if (payout == null) {
@@ -94,7 +81,13 @@ public class PayoutManagementHandler implements PayoutManagementSrv.Iface {
     }
 
     @Override
-    public List<String> generatePayouts(GeneratePayoutParams generatePayoutParams) throws InvalidRequest, TException {
+    public List<Event> getEvents(String s, EventRange eventRange) throws PayoutNotFound, EventNotFound, InvalidRequest, TException {
+        // TODO [a.romanov]: impl
+        throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public List<String> generatePayouts(GeneratePayoutParams generatePayoutParams) throws TException {
         log.info("Start generate payouts, params: {}", generatePayoutParams);
         try {
             TimeRange timeRange = generatePayoutParams.getTimeRange();
@@ -102,24 +95,27 @@ public class PayoutManagementHandler implements PayoutManagementSrv.Iface {
             LocalDateTime toTime = TypeUtil.stringToLocalDateTime(timeRange.getToTime());
 
             if (fromTime.isAfter(toTime)) {
-                throw new InvalidRequest(Arrays.asList("fromTime must be less that toTime"));
+                throw new InvalidRequest(List.of("fromTime must be less that toTime"));
             }
 
             ShopParams shopParams = generatePayoutParams.getShopParams();
-            String payoutId = payoutService.createPayoutByRange(shopParams.getPartyId(), shopParams.getShopId(), fromTime, toTime);
+            String payoutId = payoutService.createPayoutByRange(
+                    shopParams.getPartyId(),
+                    shopParams.getShopId(),
+                    fromTime,
+                    toTime);
 
-            return Collections.singletonList(payoutId);
-
+            return List.of(payoutId);
         } catch (InsufficientFundsException | NotFoundException | InvalidStateException | IllegalArgumentException ex) {
             log.error("Failed to generate payouts, generatePayoutParams={}", generatePayoutParams, ex);
-            throw new InvalidRequest(Arrays.asList(ex.getMessage()));
+            throw new InvalidRequest(List.of(ex.getMessage()));
         } finally {
             log.info("End generate payouts, params: {}", generatePayoutParams);
         }
     }
 
     @Override
-    public void confirmPayout(String payoutId) throws InvalidRequest, TException {
+    public void confirmPayout(String payoutId) {
         log.info("Start confirm payout, payoutId: {}", payoutId);
         try {
             payoutService.confirm(payoutId);
@@ -129,7 +125,7 @@ public class PayoutManagementHandler implements PayoutManagementSrv.Iface {
     }
 
     @Override
-    public void cancelPayout(String payoutId, String details) throws InvalidRequest, TException {
+    public void cancelPayout(String payoutId, String details) {
         log.info("Start cancel payouts, payoutIds: {}", payoutId);
         try {
             payoutService.cancel(payoutId, details);
@@ -139,70 +135,97 @@ public class PayoutManagementHandler implements PayoutManagementSrv.Iface {
     }
 
     @Override
-    public PayoutSearchResponse getPayoutsInfo(PayoutSearchRequest payoutSearchRequest) throws InvalidRequest, TException {
-        PayoutSearchCriteria payoutSearchCriteria = payoutSearchRequest.getSearchCriteria();
+    public PayoutSearchResponse getPayoutsInfo(PayoutSearchRequest payoutSearchRequest) throws TException {
         log.info("GetPayoutsInfo with request parameters: {}", payoutSearchRequest);
+        PayoutSearchCriteria payoutSearchCriteria = payoutSearchRequest.getSearchCriteria();
+
         Long fromId = payoutSearchRequest.isSetFromId() ? payoutSearchRequest.getFromId() : null;
         int size = payoutSearchRequest.isSetSize() ? payoutSearchRequest.getSize() : MAX_SIZE;
         com.rbkmoney.payouter.domain.enums.PayoutStatus payoutStatus = Optional.ofNullable(payoutSearchCriteria.getStatus())
                 .map(ps -> com.rbkmoney.payouter.domain.enums.PayoutStatus.valueOf(ps.name().toUpperCase()))
                 .orElse(null);
+
         Optional<TimeRange> timeRangeOptional = Optional.ofNullable(payoutSearchCriteria.getTimeRange());
         LocalDateTime fromTime = timeRangeOptional.map(tr -> TypeUtil.stringToLocalDateTime(tr.getFromTime())).orElse(null);
         LocalDateTime toTime = timeRangeOptional.map(tr -> TypeUtil.stringToLocalDateTime(tr.getToTime())).orElse(null);
+
         Optional<AmountRange> amountRangeOptional = Optional.ofNullable(payoutSearchCriteria.getAmountRange());
         Long minAmount = amountRangeOptional.map(AmountRange::getMin).orElse(null);
         Long maxAmount = amountRangeOptional.map(AmountRange::getMax).orElse(null);
+
         CurrencyRef currencyCode = payoutSearchCriteria.getCurrency();
         PayoutType payoutType = getPayoutType(payoutSearchCriteria);
         List<String> payoutIds = payoutSearchCriteria.getPayoutIds();
 
         validateRequest(size, fromTime, toTime);
 
-        List<Payout> payouts = payoutService.search(payoutStatus, fromTime, toTime, payoutIds, minAmount, maxAmount, currencyCode, payoutType, fromId, size);
+        List<Payout> payouts = payoutService.search(
+                payoutStatus,
+                fromTime,
+                toTime,
+                payoutIds,
+                minAmount,
+                maxAmount,
+                currencyCode,
+                payoutType,
+                fromId,
+                size);
+
         long lastId = payouts.isEmpty() ? 0L : payouts.get(payouts.size() - 1).getId();
         PayoutSearchResponse payoutSearchResponse = new PayoutSearchResponse(
                 payouts.stream()
-                        .map(payout ->
-                                DamselUtil.toDamselPayout(payout, shumwayService.getPostings(payout.getPayoutId()))
-                                        .setSummary(DamselUtil.toDamselPayoutSummary(payoutSummaryService.get(payout.getPayoutId())))
-                        )
-                        .collect(Collectors.toList()),
-                lastId
-        );
+                        .map(payout -> DamselUtil.toDamselPayout(payout, shumwayService.getPostings(payout.getPayoutId()))
+                                .setSummary(DamselUtil.toDamselPayoutSummary(payoutSummaryService.get(payout.getPayoutId()))))
+                        .collect(toList()),
+                lastId);
+
         log.info("GetPayoutsInfo count: {}", payouts.size());
         return payoutSearchResponse;
     }
 
     @Override
     @Transactional(propagation = Propagation.REQUIRED)
-    public void generateReport(Set<String> payoutIds) throws InvalidRequest, TException {
+    public void generateReport(Set<String> payoutIds) throws TException {
         log.info("Start generate report for payouts: {}", payoutIds);
         if (payoutIds.isEmpty()) {
-            throw new InvalidRequest(Collections.singletonList("Empty list of payout ids"));
+            throw new InvalidRequest(List.of("Empty list of payout ids"));
         }
 
         List<Payout> payouts = payoutService.getByIds(payoutIds);
         if (payoutIds.size() != payouts.size()) {
-            List<String> foundedIds = payouts.stream().map(Payout::getPayoutId).collect(Collectors.toList());
-            List<String> diff = payoutIds.stream().filter(id -> !foundedIds.contains(id)).collect(Collectors.toList());
-            throw new InvalidRequest(Collections.singletonList("Some of payouts not found: " + diff));
+            List<String> foundedIds = payouts.stream()
+                    .map(Payout::getPayoutId)
+                    .collect(toList());
+            List<String> diff = payoutIds.stream()
+                    .filter(id -> !foundedIds.contains(id))
+                    .collect(toList());
+            throw new InvalidRequest(List.of("Some of payouts not found: " + diff));
         }
-        Optional<Payout> wrongPayout = payouts.stream().filter(p -> !p.getStatus().equals(com.rbkmoney.payouter.domain.enums.PayoutStatus.UNPAID)).findFirst();
+
+        Optional<Payout> wrongPayout = payouts.stream()
+                .filter(p -> !p.getStatus().equals(com.rbkmoney.payouter.domain.enums.PayoutStatus.UNPAID))
+                .findFirst();
         if (wrongPayout.isPresent()) {
-            throw new InvalidRequest(Collections.singletonList("Payout " + wrongPayout.get().getPayoutId() + " has wrong status; it should be UNPAID"));
+            throw new InvalidRequest(List.of("Payout " + wrongPayout.get().getPayoutId() + " has wrong status; it should be UNPAID"));
         }
 
         if (!payouts.isEmpty() && payouts.stream().allMatch(payout -> payout.getType() == PayoutType.bank_account)) {
             Payout payout = payouts.get(0);
             PayoutAccountType accountType = payout.getAccountType();
             if (payouts.size() > 1) {
-                Optional<Payout> differentAccTypePayout = payouts.stream().filter(p -> !p.getAccountType().equals(accountType)).findFirst();
+                Optional<Payout> differentAccTypePayout = payouts.stream()
+                        .filter(p -> !p.getAccountType().equals(accountType))
+                        .findFirst();
                 if (differentAccTypePayout.isPresent()) {
-                    throw new InvalidRequest(Collections.singletonList("Payout " + differentAccTypePayout.get().getPayoutId() + " has a different type then first payout " + payout.getPayoutId() + "; should be only the one type (residents or non-residents)"));
+                    throw new InvalidRequest(List.of("Payout " + differentAccTypePayout.get().getPayoutId() +
+                            " has a different type then first payout " + payout.getPayoutId() +
+                            "; should be only the one type (residents or non-residents)"));
                 }
             }
-            ReportService reportService = accountType.equals(PayoutAccountType.russian_payout_account) ? residentsReportService : nonresidentsReportService;
+
+            ReportService reportService = accountType.equals(PayoutAccountType.russian_payout_account)
+                    ? residentsReportService
+                    : nonresidentsReportService;
             reportService.generateAndSave(payouts);
         }
 
@@ -215,11 +238,13 @@ public class PayoutManagementHandler implements PayoutManagementSrv.Iface {
         if (size != null && (size <= 0 || size > MAX_SIZE)) {
             errorList.add(String.format("Size %d must be positive and less then %d", size, MAX_SIZE));
         }
+
         if (toTime != null && fromTime != null) {
             if (fromTime.isAfter(toTime)) {
                 errorList.add(String.format("FromTime %s must be before toTime %s", fromTime, toTime));
             }
         }
+
         if (!errorList.isEmpty()) {
             throw new InvalidRequest(errorList);
         }
@@ -231,5 +256,4 @@ public class PayoutManagementHandler implements PayoutManagementSrv.Iface {
                 .map(PayoutType::valueOf)
                 .orElse(null);
     }
-
 }
